Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignNumObjNumObj.quorum
class Main
    action Main
        Number v
        v:SetValue(Test())
        if v:GetValue() = 5.0
            output "passed"
        end
    end

    action Test() returns Number
        Number var
        var:SetValue(5.0)
        return var
    end
end