Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignTextObjNumObj.quorum
class Main
    action Main
        Text v
        v:SetValue(Test())
    end

    action Test() returns Text
        Number var
        var:SetValue(5.0)
        return var
    end
end